<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General app and misc. strings -->
    <string name="app_name">WristbandProject</string>
    <string name="hello_world">Tag ID:</string>

    <!-- General UI strings (save, load, ...) -->
    <string name="action_settings">Settings</string>
    <string name="laodedText">Loaded</string>
    <string name="saveString">Save</string>
    <string name="cancelString">Cancel</string>
    <string name="save_dialog_title">Save Tag?</string>
    <string name="send_text">Send</string>
    <string name="start_text">Start</string>
    <string name="stop_text">Stop</string>
    <string name="tutor_string">Tutor</string>
    <string name="wristband_string">Wristband</string>

    <!-- Notification strings -->
    <string name="alert_notification_title">Trespass Alert!</string>


    <!-- Web Service Debug Activity -->
    <string name="ws_debug_text">Web Service Debug</string>

    <string-array name="wsMethodsName">
        <item>Payment Request Merchant</item>
        <item>Payment Request Customer</item>
    </string-array>

    <!-- Wireless Activity strings -->
    <string name="title_activity_wireless">WirelessActivity</string>
    <string name="wireless_text">Wireless</string>

    <!-- Card Emulation Activity strings -->
    <string name="title_activity_card_emulation">CardEmulationActivity</string>
    <string name="card_emulation_text">Card Emulation</string>

    <!-- Card Reader Activity strings -->
    <string name="title_activity_card_reader">CardReaderActivity</string>
    <string name="card_reader_text">Card Reader</string>
    <string name="last_tag_discovered_text">Last Tag</string>

    <!-- NFC subsystem strings -->
    <string name="nfcAID">F0010203040506</string>
    <string name="servicedesc">Card emulation service</string>
    <string name="aiddescription">Default Application ID group(s)</string>
    <string name="title_activity_web_service_debug">WebServiceDebugActivity</string>
    <string name="service_reply_string">Service Reply</string>
    <string name="reset_string">Reset</string>
    <string name="location_button_name">Location</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="map_text">Map</string>


</resources>
