<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="it.logostech.wristbandproject.app.MainActivity">


        <Button
            android:id="@+id/wirelessActivityButton"
            android:text="@string/wireless_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/cardEmulationActivityButton"
            android:text="@string/card_emulation_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/wirelessActivityButton"
            android:layout_alignParentLeft="true"/>

        <Button
            android:id="@+id/cardReaderActivityButton"
            android:text="@string/card_reader_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardEmulationActivityButton"
            android:layout_alignParentLeft="true"/>

        <Button
            android:id="@+id/wsDebugActivityButton"
            android:text="@string/ws_debug_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardReaderActivityButton"
            android:layout_alignParentLeft="true"/>

        <Button
            android:id="@+id/locationActivityButton"
            android:text="@string/location_button_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wsDebugActivityButton"/>

        <LinearLayout
            android:id="@+id/locationLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/locationActivityButton">
            <Button
                android:id="@+id/locationModeToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Toggle Mode"
                />
            <TextView
                android:id="@+id/locationModeTextView"
                android:text="@string/tutor_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    <Button
        android:id="@+id/mapActivityButton"
        android:text="@string/map_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/locationLinearLayout"/>


</RelativeLayout>
